# Vehicle-Insurance-Domain-E2E-Project

./: .gitignore  LICENSE  README.md  Workflow.txt  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
notebook/: mongoDB_demo.ipynb
src/logger/: __init__.py
