[project]
name = "src"
version = "0.0.1"
description = "An MLops project for understanding productionization and setup"
authors = [{name ="Raushan Kumar", email ="rk7250846@gmail.com"    }]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}  
